--- a/index.html
+++ b/index.html
@@ -31,77 +31,96 @@
             <input type="text" name="word" id="word">
         </div>
         <div class="submit">
-            <button class="submit" onclick="setUp()">
-                OK
-            </button>
+            <button class="submit" onclick="setUp()">OK</button>
         </div>
-    </div>
+      </div>
     </div>
     <div id="part2">
-    <nav>
-      <div class="grid-container-3">
-        <div class="grid-item">
-          <li class="first"></li>
-          <li class="second"></li>
-          <li class="third"></li>
+      <nav>
+        <div class="grid-container-3">
+          <div class="grid-item">
+            <li class="first"></li>
+            <li class="second"></li>
+            <li class="third"></li>
+          </div>
+          <div class="grid-item align">
+            <h1 class="header">Tickets</h1>
+          </div>
+          <div class="grid-item imageDiv"><img src="img/cart-flipped.png" alt="cart"></div>
         </div>
-        <div class="grid-item align">
-          <h1 class="header">Tickets</h1>
-        </div>
-        <div class="grid-item imageDiv"><img src="img/cart-flipped.png" alt="cart"></div>
+      </nav>
+      <div class="grid-container-3 links">
+        <div class="grid-item align active">Active Tickets</div>
+        <div class="grid-item align">My Tickets</div>
+        <div class="grid-item align">Buy Tickets</div>
       </div>
-    </nav>
-    <div class="grid-container-3 links">
-      <div class="grid-item align active">Active Tickets</div>
-      <div class="grid-item align">My Tickets</div>
-      <div class="grid-item align">Buy Tickets</div>
-    </div>
-    <div class="container">
-      <div class="wrapper">
-        <div class="qr_wrapper">
-          <img src="img/qr.jpeg" alt="qrcode">
-        </div>
-        <div class="passname">
-          <h1>Manchester 7 <br> Day MagicRider</h1>
-        </div>
-        <div class="passtype">
-          <div class="grid-container-2">
-            <div class="grid-item passtype-element">
-              <h1>1 Adult</h1>
-      
-            </div>
-            <div class="grid-item passtype-element" style="text-align:right;">
-              <h1>£21</h1>
+      <div class="container">
+        <div class="wrapper">
+          <div class="qr_wrapper">
+            <img src="img/qr.jpeg" alt="qrcode">
+          </div>
+          <div class="passname">
+            <h1>Manchester 7 <br> Day MagicRider</h1>
+          </div>
+          <div class="passtype">
+            <div class="grid-container-2">
+              <div class="grid-item passtype-element">
+                <h1>1 Adult</h1>
+              </div>
+              <div class="grid-item passtype-element" style="text-align:right;">
+                <h1>£21</h1>
+              </div>
             </div>
           </div>
+          <div class="valid">
+            <p>Valid from: 00:00, <span id="date"></span></p>
+          </div>
+          <div id="animated" class="clockwise">
+            <h1 id="display"></h1>
+          </div>
+          <div class="countdown">
+            <p class="countdown_text">Ticket expires in</p>
+            <p id="timer"></p>
+          </div>
+          <div class="ticket_id">
+            <p>1241-<span id="id_date"></span>133-438</p>
+          </div>
+          <div class="bottom">
+            <p>More details <span class="to">&gt;</span></p>
+          </div>
         </div>
-        <div class="valid">
-          <p>Valid from: 00:00, <span id="date"></span></p>
-        </div>
-        <div id="animated" class="clockwise">
-          <h1 id="time"></h1>
-          <p class="word-holder">Hello</p>
-        </div>
-        <div class="countdown">
-          <p class="countdown_text">Ticket expires in</p>
-          <p id="timer"></p>
-        </div>
-        <div class="ticket_id">
-          <p>1241-<span id="id_date"></span>133-438</p>
-        </div>
-        <div class="bottom">
-          <p>More details <span class="to">&gt;</span></p>
-        </div>
+        <footer></footer>
       </div>
-      <footer></footer>
     </div>
-  </div>
     <script src="buspass.js"></script>
     <script>
+      const displayElement = document.getElementById("display");
+      let showTime = true;
+      const wordInput = document.getElementById("word");
+      let word = "Hello"; // Default word, can be updated through input
+
+      function updateDisplay() {
+          displayElement.classList.add("fade");
+
+          setTimeout(() => {
+              displayElement.innerText = showTime ? new Date().toLocaleTimeString() : word;
+              displayElement.classList.remove("fade");
+              showTime = !showTime;
+          }, 1000);
+      }
+
+      setInterval(updateDisplay, 2000);
+      updateDisplay();
+
+      // Set up word based on user input
+      function setUp() {
+          word = wordInput.value || "Hello";
+      }
+
       window.addEventListener("click", (event) => {
-        document.documentElement.requestFullscreen().catch((e) => {
-          console.log(e);
-        });
+          document.documentElement.requestFullscreen().catch((e) => {
+              console.log(e);
+          });
       });
     </script>
   </body>
