--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     </div>
     <script src="buspass.js"></script>
     <script>
+window.onload = function() {
       const displayElement = document.getElementById("display");
       let showTime = true;
       const wordInput = document.getElementById("word");
