--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>Valid from: 00:00, <span id="date"></span></p>
           </div>
           <div id="animated" class="clockwise">
-            <h1 id="display"></h1>
+            <h1 id="display" style="color: black; font-size: 2em;"></h1>
           </div>
           <div class="countdown">
             <p class="countdown_text">Ticket expires in</p>
