--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,95 +12,97 @@
     <link rel="apple-touch-icon" href="apple-icon-180.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <script src="app-input.js"></script>
-  </head>
-  <body>
+</head>
+<body>
     <div id="part1">
-      <div class="container-part1">
-        <div class="color">
-            <p style="color: black;">What colour would you like the app to display?</p>
-            <select name="color" id="color">
-                <option value="orange">Orange</option>
-                <option value="blue">Blue</option>
-                <option value="green">Green</option>
-                <option value="grey">Grey</option>
-                <option value="pink">Pink</option>
-            </select>    
+        <div class="container-part1">
+            <div class="color">
+                <p style="color: black;">What colour would you like the app to display?</p>
+                <select name="color" id="color">
+                    <option value="orange">Orange</option>
+                    <option value="blue">Blue</option>
+                    <option value="green">Green</option>
+                    <option value="grey">Grey</option>
+                    <option value="pink">Pink</option>
+                </select>
+            </div>
+            <div class="word">
+                <p style="color: black;">What text would you like the app to display?</p>
+                <input type="text" name="word" id="word">
+            </div>
+            <div class="submit">
+                <button class="submit" onclick="setUp()">OK</button>
+            </div>
         </div>
-        <div class="word">
-            <p style="color: black;">What text would you like the app to display?</p>
-            <input type="text" name="word" id="word">
-        </div>
-        <div class="submit">
-            <button class="submit" onclick="setUp()">OK</button>
-        </div>
-      </div>
     </div>
     <div id="part2">
-      <nav>
-        <div class="grid-container-3">
-          <div class="grid-item">
-            <li class="first"></li>
-            <li class="second"></li>
-            <li class="third"></li>
-          </div>
-          <div class="grid-item align">
-            <h1 class="header">Tickets</h1>
-          </div>
-          <div class="grid-item imageDiv"><img src="img/cart-flipped.png" alt="cart"></div>
-        </div>
-      </nav>
-      <div class="grid-container-3 links">
-        <div class="grid-item align active">Active Tickets</div>
-        <div class="grid-item align">My Tickets</div>
-        <div class="grid-item align">Buy Tickets</div>
-      </div>
-      <div class="container">
-        <div class="wrapper">
-          <div class="qr_wrapper">
-            <img src="img/qr.jpeg" alt="qrcode">
-          </div>
-          <div class="passname">
-            <h1>Manchester 7 <br> Day MagicRider</h1>
-          </div>
-          <div class="passtype">
-            <div class="grid-container-2">
-              <div class="grid-item passtype-element">
-                <h1>1 Adult</h1>
-              </div>
-              <div class="grid-item passtype-element" style="text-align:right;">
-                <h1>£21</h1>
-              </div>
+        <nav>
+            <div class="grid-container-3">
+                <div class="grid-item">
+                    <li class="first"></li>
+                    <li class="second"></li>
+                    <li class="third"></li>
+                </div>
+                <div class="grid-item align">
+                    <h1 class="header">Tickets</h1>
+                </div>
+                <div class="grid-item imageDiv"><img src="img/cart-flipped.png" alt="cart"></div>
             </div>
-          </div>
-          <div class="valid">
-            <p>Valid from: 00:00, <span id="date"></span></p>
-          </div>
-          <div id="animated" class="clockwise">
-            <h1 id="display" style="color: black; font-size: 2em;"></h1>
-          </div>
-          <div class="countdown">
-            <p class="countdown_text">Ticket expires in</p>
-            <p id="timer"></p>
-          </div>
-          <div class="ticket_id">
-            <p>1241-<span id="id_date"></span>133-438</p>
-          </div>
-          <div class="bottom">
-            <p>More details <span class="to">&gt;</span></p>
-          </div>
+        </nav>
+        <div class="grid-container-3 links">
+            <div class="grid-item align active">Active Tickets</div>
+            <div class="grid-item align">My Tickets</div>
+            <div class="grid-item align">Buy Tickets</div>
         </div>
-        <footer></footer>
-      </div>
+        <div class="container">
+            <div class="wrapper">
+                <div class="qr_wrapper">
+                    <img src="img/qr.jpeg" alt="qrcode">
+                </div>
+                <div class="passname">
+                    <h1>Manchester 7 <br> Day MagicRider</h1>
+                </div>
+                <div class="passtype">
+                    <div class="grid-container-2">
+                        <div class="grid-item passtype-element">
+                            <h1>1 Adult</h1>
+                        </div>
+                        <div class="grid-item passtype-element" style="text-align:right;">
+                            <h1>£21</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="valid">
+                    <p>Valid from: 00:00, <span id="date"></span></p>
+                </div>
+                <div id="animated" class="clockwise" style="margin-top: 20px;">
+                    <h1 id="display" style="color: black; font-size: 2em;"></h1>
+                </div>
+                <div class="countdown">
+                    <p class="countdown_text">Ticket expires in</p>
+                    <p id="timer"></p>
+                </div>
+                <div class="ticket_id">
+                    <p>1241-<span id="id_date"></span>133-438</p>
+                </div>
+                <div class="bottom">
+                    <p>More details <span class="to">&gt;</span></p>
+                </div>
+            </div>
+            <footer></footer>
+        </div>
     </div>
+    <script src="buspass.js"></script>
     <script>
         window.onload = function() {
             const displayElement = document.getElementById("display");
             let showTime = true;
             const wordInput = document.getElementById("word");
-            let word = "Hello"; // Default word
+            let word = "Hello"; // Default word, can be updated through input
 
             function updateDisplay() {
                 displayElement.classList.add("fade");
+
                 setTimeout(() => {
                     displayElement.innerText = showTime ? new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' }) : word;
                     displayElement.classList.remove("fade");
@@ -113,22 +115,15 @@
 
             // Set up word based on user input
             function setUp() {
-                word = wordInput.value.trim() || "Hello"; // Update the word if input is not empty
-                wordInput.value = ""; // Clear the input field
+                word = wordInput.value || "Hello";
             }
-
-            // Update display immediately after input
-            wordInput.addEventListener("input", () => {
-                word = wordInput.value.trim() || "Hello";
-                displayElement.innerText = word; // Display the updated word
-            });
 
             window.addEventListener("click", (event) => {
                 document.documentElement.requestFullscreen().catch((e) => {
                     console.log(e);
                 });
             });
-        };
+        }
     </script>
-  </body>
+</body>
 </html>
