--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="valid">
             <p>Valid from: 00:00, <span id="date"></span></p>
           </div>
-          <div id="animated" class="clockwise"> style="margin-top: 20px;">
+          <div id="animated" class="clockwise">
             <h1 id="display" style="color: black; font-size: 2.5em;"></h1>
           </div>
           <div class="countdown">
