--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
                     </div>
                 </div>
                 <div class="valid">
-                    <p>Valid from: <span id="valid-date"></span></p>
+                    <p>Valid from: 00:00, <span id="date"></span></p>
                 </div>
                 <div id="animated" class="clockwise">
                     <h1 id="display" style="color: black; font-size: 2.5em;"></h1>
                 </div>
                 <div class="countdown">
-                    <p class="countdown_text">Ticket expires in: <span id="countdown-timer"></span></p>
+                    <p class="countdown_text">Ticket expires in</p>
+                    <p id="timer"></p>
                 </div>
                 <div class="ticket_id">
                     <p>1241-<span id="id_date"></span>133-438</p>
