--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                     </div>
                 </div>
                 <div class="valid">
-                    <p>Valid from: 00:00, <span id="date"></span></p>
+                    <p>Valid from: <span id="valid-date"></span></p>
                 </div>
                 <div id="animated" class="clockwise">
                     <h1 id="display" style="color: black; font-size: 2.5em;"></h1>
                 </div>
                 <div class="countdown">
-                    <p class="countdown_text">Ticket expires in</p>
-                    <p id="timer"></p>
+                    <p class="countdown_text">Ticket expires in:</p>
+                    <h2 id="countdown-timer" style="font-size: 2em;"></h2>
                 </div>
                 <div class="ticket_id">
                     <p>1241-<span id="id_date"></span>133-438</p>
@@ -100,12 +100,14 @@
             let showTime = true;
             const wordInput = document.getElementById("word");
             let word = "Hello"; // Default word
-            const expirationTime = 7 * 24 * 60 * 60 * 1000; // 7 days in milliseconds
+            const expirationTime = 6 * 24 * 60 * 60 * 1000; // 6 days in milliseconds
             const expirationDate = new Date(Date.now() + expirationTime);
             let timeLeft = expirationTime;
 
-            // Set today's date for "Valid from"
-            validDateElement.innerText = new Date().toLocaleDateString();
+            // Set valid from date to yesterday in specified format
+            const yesterday = new Date();
+            yesterday.setDate(yesterday.getDate() - 1);
+            validDateElement.innerText = `${yesterday.getHours().toString().padStart(2, '0')}:${yesterday.getMinutes().toString().padStart(2, '0')} ${yesterday.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: 'numeric' })}`;
 
             function updateDisplay() {
                 displayElement.classList.add("fade");
@@ -118,9 +120,10 @@
 
             function updateCountdown() {
                 if (timeLeft > 0) {
+                    const hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
                     const minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
                     const seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
-                    countdownTimerElement.innerText = `${minutes}m ${seconds}s`;
+                    countdownTimerElement.innerText = `${hours}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
                     timeLeft -= 1000; // Decrement the timer by 1 second
                 } else {
                     countdownTimerElement.innerText = "Expired";
