--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                     <p>Valid from: <span id="valid-date"></span></p>
                 </div>
                 <div id="animated" class="clockwise">
-                    <h1 id="display" style="color: black; font-size: 2em; font-weight: bold; margin-top: 7px;"></h1>
+                    <h1 id="display" style="color: black; font-size: 2.2em; font-weight: bold; margin-top: 5px;"></h1>
                 </div>
                 <div class="countdown" style="text-align: center;">
                     <p class="countdown_text">Ticket expires in:</p>
-                    <h2 id="countdown-timer" style="font-size: 1.5em; color: black; font-weight: normal; margin-top: 10px;"></h2>
+                    <h2 id="countdown-timer" style="font-size: 1.5em; color: black; font-weight: bold; margin-top: 10px;"></h2>
                 </div>
                 <div class="ticket_id">
                     <p>1241-<span id="id_date"></span>133-438</p>
