--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h2 id="countdown-timer" style="font-size: 1.5em; color: black; font-weight: bold; margin-top: 10px;"></h2>
                 </div>
                 <div class="ticket_id">
-                    <p>1241-<span id="id_date"></span>20241029133-438</p>
+                    <p>1241-<span id="valid_date"></span>133-438</p>
                 </div>
                 <div class="bottom">
                     <p>More details <span class="to">&gt;</span></p>
